syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpckotlin";
option java_outer_classname = "FruitStoreProto";
option objc_class_prefix = "FSP";

package grpckotlin;

service FruitStore {
    rpc AllFruits (AllFruitsRequest) returns (AllFruitsResponse);
    rpc OneFruit (OneFruitRequest) returns (OneFruitResponse);
    rpc NewFruit (NewFruitRequest) returns (NewFruitResponse);
    rpc EditFruit (EditFruitRequest) returns (EditFruitResponse);
    rpc DeleteFruit (DeleteFruitRequest) returns (DeleteFruitResponse);
}

message Fruit {
    int64 id = 1;
    string no = 2;
    string description = 3;
}

enum Status {
    ERROR = 0;
    SUCCESS = 1;
}

message AllFruitsRequest {}

message AllFruitsResponse {
    Status status = 1;
    string error = 2;
    repeated Fruit data = 3;
}

message OneFruitRequest {
    int64 id = 1;
}

message OneFruitResponse {
    Status status = 1;
    string error = 2;
    Fruit data = 3;
}

message NewFruitRequest {
    Fruit fruit = 1;
}

message NewFruitResponse {
    Status status = 1;
    string error = 2;
    Fruit data = 3;
}

message EditFruitRequest {
    Fruit fruit = 1;
}

message EditFruitResponse {
    Status status = 1;
    string error = 2;
    Fruit data = 3;
}

message DeleteFruitRequest {
    int64 id = 1;
}

message DeleteFruitResponse {
    Status status = 1;
    string error = 2;
    Fruit data = 3;
}
